# h2-gym

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
src/h2-gym/data/hydrogen/csv/: CoastalChile_20-21_Wind.csv  CoastalChile_21-22_Wind.csv  CoastalChile_23-24_Wind.csv
src/h2-gym/graph/node/: core.py
src/h2-gym/graph/node/props/: __init__.py  variables.py
src/h2-gym/graph/spatial/: core.py  utils.py
src/h2-gym/graph/temporal/isochronous/: core.py
src/h2_gym/algs/: __init__.py
src/h2_gym/algs/filter/: __init__.py  core.py  utils.py
src/h2_gym/algs/mpc/: __init__.py  core.py
src/h2_gym/algs/mpc/fast/: __init__.py  core.py  utils.py
src/h2_gym/algs/mpc/slow/: __init__.py  core.py
src/h2_gym/algs/sampler/: main.py
src/h2_gym/data/hydrogen/csv/: CoastalChile_05-10_Wind.csv
src/h2_gym/data/planning/: core.py
src/h2_gym/data/shipping/: __init__.py  core.py
src/h2_gym/envs/: __init__.py
src/h2_gym/envs/planning/: __init__.py  core.py
src/h2_gym/envs/shipping/: __init__.py  core.py
src/h2_gym/envs/supply/: __init__.py  core.py  utils.py
src/h2_gym/graph/node/: core.py  utils.py
src/h2_gym/graph/spatial/: __init__.py  builder.py  core.py  utils.py
src/h2_gym/graph/temporal/: __init__.py  stochastic_generator.py
src/vcgym/data/hydrogen/: supply_1.json  supply_1_funcs.py
src/vcgym/graph/node/: __init__.py  core.py  utils.py
src/vcgym/graph/spatial/: __init__.py  builder.py  core.py
src/vcgym/graph/temporal/: __init__.py  stochastic_generator.py
tests/: _env_testing.ipynb  _planning_testing.ipynb  _shipping_testing.ipynb  _testing.ipynb  kalman.ipynb  planning.ipynb  shipping.ipynb  supply.ipynb  weather.ipynb
(+44 files in other folders)
