[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2_gym"
version = "0.1"
description = "RL environments for graph-structured value chain problems"
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "meteor_py  @ git+https://github.com/cja119/meteor_py.git",
  "numpy",
  "jax",
  "mu_F @ git+https://github.com/mawbray/mu.F.git"
]